tests: disable service tests
Signed-off-by: Stephane Bouchet <sbouchet@redhat.com>